2008-05-14  Ulrich Drepper  <drepper@redhat.com>

	* string/Makefile (distribute): Add str-two-way.h.

2008-03-29  Eric Blake	<ebb9@byu.net>

	Rewrite string searches to O(n) rather than O(n^2).
	* string/str-two-way.h: New file.  For linear fixed-allocation
	string searching.
	* string/memmem.c: New implementation.
	* string/strstr.c: New implementation.
	* string/strcasestr.c: New implementation.

2008-04-11  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regcomp.c (optimize_utf8): Add a note on why we test
	opr.ctx_type.
	(calc_first): Initialize constraint field.
	(duplicate_node_closure): Use it instead of special casing ANCHORS.
	Use search_duplicated_node to avoid loops.  Fix grammar.
	(duplicate_node): Merge constraint field for all node types.
	(calc_eclosure_iter): Look at constraint field for all node types.
	* posix/regex_internal.c (create_cd_newstate): Don't look at
	create_cd_newstate.

2008-05-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6428]
	* configure.in: Don't use $CFLAGS when assembling, use $ASFLAGS.

	[BZ #6442]
	* string/endian.h: Add macros for fixed-size endian conversion.
	* bits/byteswap.h: Allow inclusion from <endian.h>.
	* sysdeps/i386/bits/byteswap.h: Likewise.
	* sysdeps/ia64/bits/byteswap.h: Likewise.
	* sysdeps/s390/bits/byteswap.h: Likewise.
	* sysdeps/x86_64/bits/byteswap.h: Likewise.
	* string/Makefile (tests): Add tst-endian.
	* string/tst-endian.c: New file.

	* iconvdata/run-iconv-test.sh: Use = instead of == in test.
	Patch by Reuben Thomas.

2008-05-14  Joseph Myers  <joseph@codesourcery.com>

	* iconvdata/Makefile (bug-iconv6-ENV, tst-iconv7-ENV): Define.

2008-05-14  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/bug-iconv6.c (do_test): Use de_DE.UTF-8 locale.

	[BZ #6461]
	* iconv/gconv_simple.c (BODY for __gconv_transform_ascii_internal):
	Add missing braces.
	(BODY for __gconv_transform_internal_ascii): Likewise.

	[BZ #6472]
	* sysdeps/posix/getaddrinfo.c (get_scope): Loopback addresses have