@@ -1,3 +1,7 @@
+2008-05-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/iso14651_t1_common: Remove duplicate U0C7B definition.
+
 2008-05-14  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #6438]
